--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0-15.0.dev <3.0.0'
+  sdk: '>3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,19 +31,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.7.1
+  firebase_core: ^2.15.1
   dynamic_color: ^1.4.0
   
   cupertino_icons: ^1.0.2
-  qr_flutter: ^4.0.0
   flutter_barcode_scanner: ^2.0.0
   simple_barcode_scanner: ^0.0.6
+  barcode: ^2.2.4
+  barcode_image: ^2.0.3
+  path_provider: ^2.1.1
+  googleapis_auth: ^1.4.1
+  firebase_storage: ^11.2.6
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: true
