--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.1
   googleapis_auth: ^1.4.1
   firebase_storage: ^11.2.6
+  flutter_svg: ^2.0.7
 
 
 dev_dependencies:
