aggiunto firebase db

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   googleapis_auth: ^1.4.1
   firebase_storage: ^11.2.6
   flutter_svg: ^2.0.7
+  firebase_database: ^10.2.5
 
 
 dev_dependencies:
@@ -81,7 +82,11 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 500
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
