--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.6
   flutter_svg: ^2.0.7
   firebase_database: ^10.2.5
+  cloud_firestore: ^4.9.1
 
 
 dev_dependencies:
